--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 classifier_settings:
   test_size: 0.3
-  random_state: 42
+  random_state: 101
 
 preprocessor_settings:
   row_data_file: 'data/source.csv'
   prep_data_file: 'data/preprocessed.csv'
   stopwords: ['добрый', 'день', 'пожа', 'любить', 'пожалуйста', 'также', 'a', 'здравствовать', 'ли', 'Здравствуйте',
               'здравствуйте', 'МАИ', 'маи', 'подсказывать', 'уточнять', 'хотеть', 'узнавать', 'таки', 'вечер',
-              'именно', 'ребята', 'т', 'е', 'ти', 'Есть', 'быть', 'На']
+              'именно', 'ребята', 'т', 'е', 'ти', 'Есть', 'быть', 'На', 'подавать', 'мочь', 'это', 'какой', 'вопрос', 'сказать', 'почему', '', '\n', ' ']
   exclusionary_stopwords: ['не', 'нет']
